<resources>
    //主界面
    <string name="app_name">推送通知</string>
    <string name="app_version">推送通知 V1.0</string>
    <string name="title_hint">输入标题</string>
    <string name="content_hint">输入内容</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="alarm_text">闹钟</string>
    <string name="revoke_text">撤销</string>
    <string name="push_text">通知</string>
    <string name="define_text">默认</string>

    //Dialog
    <string name="title_dialog">注意</string>
    <string name="message_dialog">检测到输入框存在已编辑但未推送文本，确认放弃吗？</string>
    <string name="messageNotPushed_dialog">检测到输入框存在已修改但未推送文本，确认放弃吗？</string>
    <string name="message_isRecover_dialog">检测到应用曾经异常退出, 是否恢复已推送通知？\n\n如果频繁提示，请关闭“自动检测”并将应用添加任务锁</string>
    <string name="message_recoverByHand_dialog">
        此操作可查看所有未正常撤回通知（包括现在位于状态栏的），将会读取本地数据库，未选中的将会删除，选中的将会推送。\n\n请确认当前通知栏内没有已推送通知，否则可能会进行覆盖。
    </string>
    <string name="message_autoCheck_dialog">由于国产Rom对于后台任务清理的程度不同，有的会清理App所在进程，包括注册进系统的通知。勾选此项后，请尝试使用任务管理器清理一次后台，若通知还在，请关闭此选项。\n\n当然，最好的方案是锁住此App，并移出省电优化名单。</string>
    <string name="message_bootCompleted_dialog">检测到关机前有未撤回通知，是否恢复？</string>
    <string name="message_isRevokeAllNotification_dialog">请再次确认，此操作不可逆！</string>
    <string name="messageBefore_dialog">原文本</string>
    <string name="messageAfter_dialog">修改为</string>
    <string name="messageInput_dialog">已输入</string>
    <string name="positive_dialog">放弃</string>
    <string name="enter_dialog">确认</string>
    <string name="negative_dialog">取消</string>
    <string name="recover_dialog">恢复所有</string>
    <string name="neverReminder_dialog">不再提示</string>
    <string name="push_dialog">推送</string>
    <string name="allSelect_dialog">全选</string>
    <string name="open_autoCheck_dialog">开启</string>
    <string name="close_autoCheck_dialog">关闭</string>
    <string name="title_needToRecover_dialog">待恢复通知列表</string>
    <string name="select2recover_dialog">选择恢复</string>
    <string name="title_SelfDefine_dialog">自定义按钮列表</string>
    <string name="title_SelfDefineIntro_dialog">自定义按钮介绍</string>
    <string name="message_SelfDefineIntro_dialog">这个按钮的功能是自定义的，可以在设置里修改为你想要的功能。\n\n至于为啥有的不能设定\n可能因为功能使用频率太低\n可能因为需要大面积代码重构\n当然，很有可能是找不到合适的图标了#手动滑稽</string>

    //egg
    <string name="first_toast">别瞎球点啦！(*/ω＼*)</string>
    <string name="second_toast">再点我退出了啊！(▼ヘ▼#)</string>
    <string name="third_toast">我真的要退出了啊！ヽ(#`Д´)ﾉ</string>
    <string name="fourth_toast">你居然不信！！(╯｀□′)╯~ ╧╧</string>

    //revoke_egg
    <string name="revoke_egg1">别瞎球撤回啦，还没推送呢！(ﾉﾟ∀ﾟ)ﾉ </string>
    <string name="revoke_egg2">要啥自行车啊！</string>
    <string name="revoke_egg3">送你一顶原谅帽，带好了啊</string>
    <string name="revoke_never_egg">111111</string>

    //setError
    <string name="error_et">还是写点什么吧</string>


    //Toast
    <string name="revokeAllNotification_toast">所有通知已撤销</string>
    <string name="constructing_toast">正在施工..</string>
    <string name="selectCancel_toast">取消选择</string>
    <string name="cropCancel_toast">裁剪取消</string>
    <string name="permissionCancel_toast">授权取消</string>
    <string name="openSettingFirst_toast">请先在设置里开启“主界面背景”开关</string>
    <string name="openSettingFirst1_toast">请先开启“主界面背景”开关</string>

    //menu
    <string name="revokeAll_menu">撤销所有通知</string>
    <string name="minimalistModel_menu">极简模式</string>
    <string name="setting_menu">设置</string>
    <string name="changeTheme_menu">切换主题</string>
    <string name="recoverByHand_menu">手动恢复</string>
    <string name="autoCheck_menu">自动检测</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_setting">设置</string>


    //preference_setting
    <string name="basicSetting_setting">基本设置</string>
    <string name="changeTheme_title_setting">切换主题</string>
    <string name="changeTheme_summary_setting">切换日间/夜间主题</string>
    <string name="bootCompleted_title_setting">开机自启</string>
    <string name="bootCompleted_summary_setting">请确认给予自启动权限</string>
    <string name="actionBar_title_setting">沉浸式状态栏</string>
    <string name="actionBar_summary_setting">使状态栏颜色等同于主题</string>

    <string name="notifSetting_setting">通知设置</string>
    <string name="notifBarEntrance_title_setting">通知栏入口</string>
    <string name="notifBarEntrance_summary_setting">常驻通知栏显示快速入口</string>
    <string name="notifOnGoing_title_setting">通知常驻</string>
    <string name="notifOnGoing_summary_setting">开启后通知将不会被清理</string>
    <string name="notifPriority_title_setting">通知级别</string>
    <string name="notifPriority_summary_setting">5级最高，1级最低</string>

    <string name="customSetting_setting">个性设置</string>
    <string name="selfDefine_title_setting">自定义按钮</string>
    <string name="selfDefine_summary_setting">可以将此按钮设置为列表中任意功能</string>
    <string name="mainActivityBg_title_setting">主界面背景</string>
    <string name="mainActivityBg_summary_setting">可以使用自定义图片作为主界面背景</string>
    <string name="mainActivityBgSelect_title_setting">选择图片</string>
    <string name="mainActivityBgSelect_summary_setting">裁剪图片备份地址：APN/custom.jpg\n请使用裁剪框给出的比例，这是最匹配的裁剪方式</string>
    <string name="history_title_setting">历史记录</string>
    <string name="history_summary_setting">预留坑位，以后再填</string>

    <string name="about_setting">关于</string>
    <string name="currentVersion_title_setting">当前版本</string>
    <string name="currentVersion_summary_setting">V 1.0 &#160;&#160;Debug Version</string>
    <string name="author_title_setting">作者</string>
    <string name="author_summary_setting">北风其凉</string>


    //other
    <string name="selectImageMainActivity">主界面背景图片选择</string>
    <string name="notifBarEntrance_title">通知栏入口</string>
    <string name="notifBarEntrance_content">点击添加新的通知</string>


    //通知优先级描述
    <string name="notif1">1级 &#160;&#160;状态栏无图标，锁屏不可见</string>
    <string name="notif2">2级 &#160;&#160;同上，稍高于1级</string>
    <string name="notif3">3级 &#160;&#160;状态栏有图标，锁屏可见 </string>
    <string name="notif4">4级 &#160;&#160;推荐等级</string>
    <string name="notif5">5级 &#160;&#160;最高，等同于入口通知等级</string>


    //shortcuts
    <string name="addNewNotif_shortcut">创建新通知</string>
    <string name="settings_shortcut">设置</string>
    <string name="shortcutDisabledMessage_shortcut">快捷方式已失效</string>
</resources>
