<?xml version="1.0" encoding="utf-8"?><!--最新栏目的新闻-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/preference_item"
    android:background="?attr/custom_attr_app_bg"
    android:title="@string/title_activity_setting">

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="基本设置"
        android:background="?attr/custom_attr_app_bg">
        <CheckBoxPreference
            android:id="@+id/changeTheme_setting"
            android:key="1"
            android:layout="@layout/preference_item"
            android:summary="@string/changeTheme_summary_setting"
            android:title="@string/changeTheme_title_setting"
            android:textColor="@color/teal"
            android:widgetLayout="@layout/switch_layout" />

        <CheckBoxPreference
            android:id="@+id/bootCompleted_setting"
            android:key="2"
            android:layout="@layout/preference_item"
            android:summary="@string/bootCompleted_summary_setting"
            android:title="@string/bootCompleted_title_setting"
            android:widgetLayout="@layout/switch_layout" />
        <Preference
            android:key="3"
            android:layout="@layout/preference_item"
            android:summary="删除已缓存的文章内容及图片"
            android:title="清空缓存" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="其他说明">
        <Preference
            android:layout="@layout/preference_item"
            android:summary="V 1.0"
            android:title="当前版本" />
        <Preference
            android:layout="@layout/preference_item"
            android:summary="博客：http://blog.csdn.net/never_cxb"
            android:title="TomChen" />
    </PreferenceCategory>

</PreferenceScreen>